platform/longhorn-dashboard/middleware.yaml
---
# Traefik ForwardAuth middleware for Authelia SSO
# Copy of the authelia-forwardauth middleware for the longhorn-system namespace
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia-forwardauth
  namespace: longhorn-system
spec:
  forwardAuth:
    address: http://authelia.platform.svc.cluster.local/api/authz/forward-auth
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Email
      - Remote-Name
