platform/longhorn-dashboard/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.lvs.me.uk`)
      kind: Rule
      middlewares:
        - name: authelia-forwardauth
          namespace: default
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: longhorn-dashboard-tls
